# your-story

./: .gitignore  Makefile  README.md  Your Story Design.excalidraw
backend/: README.md  pyproject.toml  run.py  test.py
backend/data/: scenes.jsonl  stories.jsonl
backend/models/: starter_prompt.py  user.py
backend/routes/: user_routes.py
backend/src/: functions.py  main.py
backend/src/flask_sqlite_boilerplate/: __init__.py  cli.py
backend/src/flask_sqlite_boilerplate/models/: starter_prompt.py  user.py
backend/src/flask_sqlite_boilerplate/routes/: user_routes.py
backend/src/instance/: app.db
frontend/: App.tsx  README.md  package-lock.json  package.json  prompt.js  testdata.js
frontend/app/components/: Carousel.tsx  StoryImage.tsx
frontend/app/pages/: CreateScene.tsx  GenImage.tsx  LandingScreen.tsx  ViewStory.tsx
frontend/app/styles/: common.tsx
frontend/types/: navigation.tsx  story.tsx
