[project]
name = "flask-sqlite-boilerplate"
version = "0.1.0"
description = "A basic Flask application with SQLite database integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.2",
    "Flask-SQLAlchemy==3.1.1",
    "python-dotenv==1.0.1",
    "click==8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_sqlite_boilerplate"]

[tool.hatch.metadata]
allow-direct-references = true
